fix modal title alignment with icon

--- a/webapp/channels/src/components/view_user_group_modal/view_user_group_modal.scss
+++ b/webapp/channels/src/components/view_user_group_modal/view_user_group_modal.scss
@@ -6,6 +6,9 @@
 
         .modal-title {
             margin-left: 16px;
+            display: flex;
+            gap: 4px;
+            align-items: center;
 
             i,
             svg {
